# skillsync

./: .gitignore  README.md  docker-compose.yml  jd_inspection_report.txt  pyproject.toml
configs/: blooms_taxonomy.yaml  cs_it_pillars.yaml  nba_po_2025.yaml
docs/: WEEK1_SETUP.md
scripts/: download_all.py  init_db.sql  inspect_jd_datasets.py  verify_env.py  verify_ontology.py
src/: __init__.py  config.py
src/agents/: __init__.py
src/analysis/: __init__.py
src/api/: __init__.py
src/ingestion/: __init__.py
src/llm/: __init__.py  providers.py  router.py
src/mapping/: __init__.py
src/ontology/: __init__.py  cs_it_filter.py  esco_parser.py  loader.py  schema.py
src/report/: __init__.py
src/retrieval/: __init__.py
tests/: test_config.py  test_llm_router.py  test_ontology.py
